# creator-search-10m

./: README.md  creators.jsonl  docker-compose.yml  evalset.jsonl  evalset_gold.jsonl  main.py  pyproject.toml  request.json
.github/workflows/: ci.yml
scripts/: eval_debug.py  eval_pipeline.py  make_evalset_gold.py  make_evalset_labeled.py  opensearch_bulk_ingest.py  opensearch_create_index.py  simulate_data.py  train_reranker.py
src/creator_search/: __init__.py  cli.py  constraints.py  cross_encoder.py  eval.py  features.py  labeling.py  recency.py  rerank.py  safety.py  schemas.py  search.py
tests/: test_core.py
