[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "creator-search-10m"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "opensearch-py>=2.5.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "pydantic>=2.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
creator-search = "creator_search.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
