[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "creator-search-10m"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "opensearch-py>=2.5.0",
  "numpy>=1.26.0",
  "pydantic>=2.0.0",
  "torch>=2.1.0",
  "transformers>=4.41.0",
  "scikit-learn>=1.3",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
creator-search = "creator_search.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
